fix(aside-filter): too wide selects

--- a/app/styles/blocks/select.styl
+++ b/app/styles/blocks/select.styl
@@ -1,3 +1,5 @@
 .select
-	&_wide
-		width 100%
+	width 100%
+
+	&_small
+		min-width 0
